<resources>
    <string name="app_name">Weather</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="winds">Winds</string>
    <string name="air_quality">Air Quality</string>
    <string name="air_quality_near_you">Air Quality Near You</string>
</resources>