<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rainy_gradient"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="418dp"
        android:layout_height="1271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="356dp"
                android:layout_height="252dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50sp"
                android:background="@drawable/layouts_bg"

                android:clipToOutline="true"
                android:textAlignment="center"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="39dp"
                    android:layout_marginEnd="14dp"
                    app:srcCompat="@drawable/_02_sun" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="44dp"
                    android:layout_toStartOf="@+id/imgView"
                    android:text="26°C"
                    android:textColor="@color/black"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/stateVal"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/temperature"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="162dp"
                    android:layout_marginBottom="-50dp"
                    android:text="Cloudy"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/feelslikeView"
                    android:layout_width="190dp"
                    android:layout_height="31dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="132dp"
                    android:layout_marginBottom="38dp"
                    android:gravity="center_vertical"
                    android:text="26C/10C feels like 22C"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/HumidityLayout"
                    android:layout_width="333dp"
                    android:layout_height="114dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="39dp"
                    android:background="@drawable/layouts_bg">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="91dp"
                        android:layout_height="84dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="209dp"
                        android:layout_marginBottom="15dp"
                        app:srcCompat="@drawable/humidity_icon" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="73dp"
                        android:layout_marginBottom="68dp"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/humidityVal"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="113dp"
                        android:layout_marginBottom="11dp"
                        android:text="26%"
                        android:textColor="@color/black"
                        android:textSize="34sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/PressureLayout"
                    android:layout_width="333dp"
                    android:layout_height="114dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="161dp"
                    android:layout_marginEnd="39dp"
                    android:background="@drawable/layouts_bg">

                    <TextView
                        android:id="@+id/pressureVal"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="113dp"
                        android:layout_marginBottom="11dp"
                        android:text="1.3"
                        android:textColor="@color/black"
                        android:textSize="34sp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="91sp"
                        android:layout_height="84sp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="209dp"
                        android:layout_marginBottom="15dp"
                        app:srcCompat="@drawable/pressure_icon" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="100dp"
                        android:layout_marginBottom="68dp"
                        android:text="Pressure"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/windsLayout"
                    android:layout_width="333dp"
                    android:layout_height="114dp"
                    android:layout_below="@+id/PressureLayout"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="38dp"
                    android:background="@drawable/layouts_bg">

                    <TextView
                        android:id="@+id/windVal"
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="117dp"
                        android:layout_marginBottom="17dp"
                        android:text="2.7"
                        android:textColor="@color/black"
                        android:textSize="34sp" />

                    <ImageView
                        android:id="@+id/windImage"
                        android:layout_width="91sp"
                        android:layout_height="84sp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="216dp"
                        android:layout_marginBottom="15dp"
                        app:srcCompat="@drawable/wind_icon" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="131dp"
                        android:text="@string/winds"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/airQualityLayout"
                    android:layout_width="333dp"
                    android:layout_height="114dp"
                    android:layout_below="@+id/windsLayout"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="41dp"
                    android:background="@drawable/layouts_bg">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="156dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="46dp"
                        android:layout_marginBottom="36dp"
                        android:text="@string/air_quality"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="105dp"
                        android:layout_height="89dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="14dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toStartOf="@+id/textView2"
                        app:srcCompat="@drawable/air_quality" />

                    <TextView
                        android:id="@+id/air_quality_index"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="120dp"
                        android:layout_marginBottom="14dp"
                        android:text="150"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        android:visibility="gone" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="374dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="133dp"
                    android:layout_height="89dp"
                    android:layout_above="@+id/sunsetView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/textView5"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/sunriseView"
                    android:layout_width="190dp"
                    android:layout_height="212dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="44dp"
                    android:background="@drawable/layouts_bg">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="135dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="28dp"
                        app:srcCompat="@drawable/sunrise_icon" />

                    <TextView
                        android:id="@+id/sunRiseTime"
                        android:layout_width="113dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="42dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="05:26"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/sunsetView"
                    android:layout_width="189dp"
                    android:layout_height="212dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="45dp"
                    android:background="@drawable/layouts_bg">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="132dp"
                        android:layout_height="113dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="28dp"
                        app:srcCompat="@drawable/sunset_icon" />

                    <TextView
                        android:id="@+id/sunSetTime"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="37dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="34dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="18:35"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/sunriseView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>